# git-forge

./: .editorconfig  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  prettier.config.mjs  tsconfig.json  vite.config.js
.github/: FUNDING.yml
.github/workflows/: create-release.yml  run-ci.yml
scripts/: release-create.sh  release-prepare.sh
src/: cli.rs  git.rs  io.rs  lib.rs  main.rs  main.ts  tui.rs
src/cli/: bare.ts  browse.rs  cli.ts  command.ts  completions.rs  config.rs  issue.rs  issue.ts  pr.rs  pr.ts  web.rs  web.ts
src/cli/forge/: api_type.rs  forge_client.rs  gitea.rs  github.rs  gitlab.rs  http_client.rs
src/cli/input/: text_editor.rs
src/forge/: forge.ts  gitea.ts  github.ts  gitlab.ts
src/utils/: args.ts  debug.ts  git.ts  httpClient.ts
tests/: README.md  package-lock.json  package.json  prettier.config.mjs  tsconfig.json  vitest.config.js
tests/integration/: bareCommand.test.ts  issueSubcommand.test.ts  prSubcommand.test.ts  webSubcommand.test.ts
tests/integration/utils/: builders.ts  cliRunner.ts  gitRepo.ts
tests/src/: globalSetup.ts  utils.ts
tests/src/server/: gitea.ts  github.ts  gitlab.ts
tests/src/server/data/gitea/: issue.json  pr.json
tests/src/server/data/github/: issue.json  pr.json
tests/src/server/data/gitlab/: issue.json  mr.json
tests/src/tests/: browse.test.ts  completions.test.ts  format.test.ts  issue.test.ts  issue_create.test.ts  issue_list.test.ts  pr_checkout.test.ts  pr_create.test.ts  pr_list.test.ts  web.test.ts
